added how to install to local computer.

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 
 <ul>
 <li><a href="http://blog.livedoor.jp/mahata_net/">a diary (2010/08 - 2011/09)</a></li>
-<li><a href="http://d.hatena.ne.jp/mahata">大切なものは目に見えない - mahataの日記 (はてなブランチ) (2008/05 2012/03)</a></li>
+<li><a href="http://d.hatena.ne.jp/mahata">大切なものは目に見えない - mahataの日記 (はてなブランチ) (2008/05 - 2012/03)</a></li>
 </ul>
 
 <h2>がらくた / Trash</h2>
