--- a/templates/index.html
+++ b/templates/index.html
@@ -6,39 +6,16 @@
 </head>
 
 <body>
-<h1>おれおれ、おれだよ! / Hello, world!</h1>
-
-<h2>自己紹介 / Self introduction</h2>
-
 <p>
-1980年代生まれのプログラマです。カナダで働いています。 / I was born in 80's.  I'm working in Canada as a computer programmer.
+<a href="https://facebook.com/yasunori.mahata"><img src="/static/img/favicon/facebook.png" alt="facebook"></a>
+<a href="https://github.com/mahata"><img src="/static/img/favicon/github.png" alt="github.com"></a>
+<a href="http://d.hatena.ne.jp/mahata"><img src="/static/img/favicon/hatena-diary.png" alt="hatena diary"></a>
+<a href="http://blog.livedoor.jp/mahata_net/"><img src="/static/img/favicon/livedoor-blog.png" alt="livedoor blog"></a>
+<a href="http://mixi.jp/show_profile.pl?id=180220"><img src="/static/img/favicon/mixi.png" alt="mixi"></a>
+<a href="http://swn.mahata.net/"><img src="/static/img/favicon/heroku.png" alt="swn.mahata.net"></a>
+<a href="http://mahata.tumblr.com/"><img src="/static/img/favicon/tumblr.png" alt="tumblr"></a>
+<a href="https://twitter.com/mahata/"><img src="/static/img/favicon/twitter.png" alt="twitter"></a>
 </p>
-
-<h2>使っているサービス / Services that I'm using</h2>
-
-<ul>
-<li><a href="http://stupid-web-nikki.herokuapp.com/">Stupid-web-nikki</a> (だいたい日本語 / mostly in Japanese)</li>
-<li><a href="https://twitter.com/mahata/">Twitter</a> (だいたい英語 / mostly in English)</li>
-<li><a href="https://facebook.com/yasunori.mahata">Facebook</a> (だいたい英語 / mostly in English)</li>
-<li><a href="http://mahata.tumblr.com/">Tumblr</a> (日本語と英語 / in Japanese and in English)</li>
-<li><a href="http://mixi.jp/show_profile.pl?id=180220">mixi</a> (だいたい日本語 / mostly in Japanese)</li>
-<li><a href="https://github.com/mahata">GitHub</a> (だいたい人工言語(!) / mostly in programming language ;))</li>
-</ul>
-
-<h2>かつて使っていたサービス / Services that I used before</h2>
-
-<ul>
-<li><a href="http://blog.livedoor.jp/mahata_net/">a diary (2010/08 - 2011/09)</a></li>
-<li><a href="http://d.hatena.ne.jp/mahata">大切なものは目に見えない - mahataの日記 (はてなブランチ) (2008/05 - 2012/03)</a></li>
-</ul>
-
-<h2>がらくた / Trash</h2>
-
-<ul>
-<li><a href="/sample/google-tex">TeX Previewer</a></li>
-</ul>
-
-<p><a href="http://creativecommons.org/licenses/by-sa/3.0/"><img src="/static/img/creativecommons.gif" alt="Creative Commons" /></a></p>
 
 </body>
 
