writing presentation material for Ruby Meetup.

--- a/templates/sample/google-tex.html
+++ b/templates/sample/google-tex.html
@@ -3,7 +3,7 @@
 
 <head>
  <meta charset="UTF-8">
- <title>数式エディタ</title>
+ <title>数式エディタ - mahata.net</title>
  <script type="text/javascript" src="/static/js/jquery-1.7.min.js"></script>
  <script type="text/javascript" src="/static/js/sample/google-tex/main.js"></script>
 </head>
