writing presentation material for Ruby Meetup.

--- a/templates/presentation/20130422.html
+++ b/templates/presentation/20130422.html
@@ -46,6 +46,7 @@
     <h3>• Software Engineer @ HootSuite</h3>
     <h3>• <span class="strong-text">PHP</span> / <span class="strong-text">Python</span> / JavaScript for work</h3>
     <h3>• <span class="strong-text">Ruby</span> / Scala for personal projects</h3>
+    <h3 class="slide">• Amateur Golfer</h3>
 </section>
 
 <section class="slide">
@@ -59,11 +60,14 @@
     <h2>Languages suitable for Code Golf</h2>
     <h3>• PHP: variable with $, no array literal (until version 5.3), array_* func</h3>
     <h3>• Python: Indents as grammar, <span class="strong-text">list comprehensions</span></h3>
-    <h3>• Ruby: free variable names</h3>
+    <h3 class="slide">• How about Ruby?</h3>
 </section>
 
 <section class="slide">
-    <p>ToDo</p>
+    <h2>Ruby as a Golf Language</h2>
+    <h3>• 1 char variable</h3>
+    <h3>• 2 char array literal</h3>
+    <h3>• No grammatical meaning for Indents</h3>
 </section>
 
 <!-- End slides. -->
