making a presentation material for Ruby Meetup.

--- a/templates/presentation/20130422.html
+++ b/templates/presentation/20130422.html
@@ -70,6 +70,16 @@
     <h3>• No grammatical meaning for Indents</h3>
 </section>
 
+<section class="slide">
+    <h1>Golf with FizzBuzz</h1>
+</section>
+
+<section class="slide">
+    <h2>Naive implementation</h2>
+    <code><pre>puts 'Hey'
+    </pre></code>
+</section>
+
 <!-- End slides. -->
 
 
