--- a/templates/presentation/20130422.html
+++ b/templates/presentation/20130422.html
@@ -31,6 +31,11 @@
         color: #f00;
         font-size: 110%;
     }
+    pre.large-text {
+        color: #000;
+        font-size: 120%;
+        font-weight: bold;
+    }
     </style>
 </head>
 <body class="deck-container">
@@ -58,8 +63,8 @@
 
 <section class="slide">
     <h2>Languages suitable for Code Golf</h2>
-    <h3>• PHP: variable with $, no array literal (until version 5.3), array_* func</h3>
-    <h3>• Python: Indents as grammar, <span class="strong-text">list comprehensions</span></h3>
+    <h3>• PHP: variables with $, no array literal (until version 5.4), array_* func</h3>
+    <h3>• Python: Indents as grammar</h3>
     <h3 class="slide">• How about Ruby?</h3>
 </section>
 
@@ -75,9 +80,88 @@
 </section>
 
 <section class="slide">
+    <h2>Golf with FizzBuzz</h2>
+    <img src="/static/img/presentation/20130422/new-quest.gif" />
+    <p style="text-align: center;">(via <a href="http://laser-lobotomy.tumblr.com/post/18120098871">LASER LOBOTOMY</a>)</p>
+</section>
+
+<section class="slide">
     <h2>Naive implementation</h2>
-    <code><pre>puts 'Hey'
-    </pre></code>
+    <code><pre class="large-text">(1..ARGV[0].to_i).each {|i|
+  f = 'Fizz' if i % 3 == 0
+  b = 'Buzz' if i % 5 == 0
+  o = f.to_s + b.to_s
+  puts o == '' ? i : o
+}</pre></code>
+    <code><pre class="slide large-text">$ irb
+&gt; ['Fizz'][0 % 3] #=> "Fizz"
+&gt; ['Fizz'][1 % 3] #=> nil
+&gt; ['Fizz'][2 % 3] #=> nil
+&gt; ['Fizz'][3 % 3] #=> "Fizz"</pre></code>
+</section>
+
+<section class="slide">
+    <h2>"no more if" version</h2>
+    <code><pre class="large-text">(1..ARGV[0].to_i).each {|i|
+  f = ['Fizz'][i % 3]
+  b = ['Buzz'][i % 5]
+  o = f.to_s + b.to_s
+  puts o == '' ? i : o
+}</pre></code>
+    <code><pre class="slide large-text">$ irb
+&gt; puts :Fizz
+Fizz
+=> nil
+&gt; "(1..ARGV[0].to_i).each{|i|".length
+=> 26
+&gt; "1.upto($*[0].to_i){|i|".length
+=> 22</pre></code>
+</section>
+
+<section class="slide">
+    <h2>"small tricks" version</h2>
+    <code><pre class="large-text">1.upto($*[0].to_i){|i|
+  f = [:Fizz][i % 3]
+  b = [:Buzz][i % 5]
+  o = f.to_s + b.to_s
+  puts o == '' ? i : o
+}</pre></code>
+    <code><pre class="slide large-text">$ irb
+&gt; [1, 2, 3, 4, 5].join("!")
+=&gt; "1!2!3!4!5"
+&gt; [1, 2, 3, 4, 5] * "!"
+=&gt; "1!2!3!4!5"</pre></code>
+</section>
+
+<section class="slide">
+    <h2>last version</h2>
+    <code><pre class="large-text">1.upto($*[0].to_i){|i|
+  o = [[:Fizz][i % 3], [:Buzz][i % 5]] * ''
+  puts o == '' ? i : o
+}</pre></code>
+<div class="slide">
+<h2>minify!</h2>
+<code><pre class="large-text">1.upto($*[0].to_i){|i|o=[[:Fizz][i%3],[:Buzz][i%5]]*'';puts o==''?i:o}</pre></code>
+</div>
+</section>
+
+<section class="slide">
+    <h2>Original</h2>
+    <code><pre class="large-text">(1..ARGV[0].to_i).each {|i|
+  f = 'Fizz' if i % 3 == 0
+  b = 'Buzz' if i % 5 == 0
+  o = f.to_s + b.to_s
+  puts o == '' ? i : o
+}</pre></code>
+    <h2>Shortened</h2>
+    <code><pre class="large-text">1.upto($*[0].to_i){|i|o=[[:Fizz][i%3],[:Buzz][i%5]]*'';puts o==''?i:o}</pre></code>
+</section>
+
+<section class="slide">
+    <h2>That's it!</h2>
+    <img src="/static/img/presentation/20130422/last-word.jpg" />
+    <p style="text-align: center;">(via <a href="http://techpp.com/2012/07/02/boycott-apple/">techpp.com</a>)</p>
+    <h2>No, nothing.  Thanks!</h2>
 </section>
 
 <!-- End slides. -->
