dropped language comparison due to the time limit.

--- a/templates/presentation/20130422.html
+++ b/templates/presentation/20130422.html
@@ -48,9 +48,9 @@
 <section class="slide">
     <h2>Yasunori MAHATA</h2>
     <h3>• Software Engineer @ HootSuite</h3>
-    <h3>• <span class="strong-text">PHP</span> / <span class="strong-text">Python</span> / JavaScript for work</h3>
-    <h3>• <span class="strong-text">Ruby</span> / Scala for personal projects</h3>
-    <h3 class="slide">• Amateur Golfer</h3>
+    <h3>• PHP / Python / JavaScript for work</h3>
+    <h3>• Ruby / Scala for personal projects</h3>
+    <h3>• Amateur Golfer</h3>
 </section>
 
 <section class="slide">
@@ -60,6 +60,7 @@
     <h3>• Speed doesn't matter</h3>
 </section>
 
+<!--
 <section class="slide">
     <h2>Languages suitable for Code Golf</h2>
     <h3>• PHP: variables with $, no array literal (until version 5.4), array_* func</h3>
@@ -73,6 +74,7 @@
     <h3>• 2 char array literal</h3>
     <h3>• No grammatical meaning for Indents</h3>
 </section>
+-->
 
 <section class="slide">
     <h2>Golf with FizzBuzz</h2>
