started writing presentation material for internal LT.

--- a/templates/presentation.html
+++ b/templates/presentation.html
@@ -9,7 +9,8 @@
 
 <p>
 <ul>
-<li><a href="/presentation/20130422">April 22, 2013 Ruby Meetup @ HootSuite</a></li>
+<li><a href="/presentation/20130422">April 22, 2013: Code Golf in Ruby - Ruby Meetup @ HootSuite</a></li>
+<li><a href="/presentation/20130613">June 13, 2013: Zsh Introduction - HootSuite Internal LT @ HootSuite</a></li>
 </ul>
 </p>
 
