started writing presentation material for internal LT.

--- a/templates/presentation/20130613.html
+++ b/templates/presentation/20130613.html
@@ -55,6 +55,36 @@
     </pre></code>
 </section>
 
+<section class="slide">
+    <h2>Zsh cursor movements</h2>
+    <ul>
+        <li>Emacs Keybinds</li>
+        <li>Ctrl-r (for search)</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Zsh completion [TAB]</h2>
+    <h3>Completion for...</h3>
+    <ul>
+        <li>directory path</li>
+        <li>git / svn</li>
+        <li>configure</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>No more pushd, popd</h2>
+</section>
+
+<section class="slide">
+    <h2>No more cd</h2>
+</section>
+
+<section class="slide">
+    <h2>Switch to Zsh?</h2>
+</section>
+
 <!-- End slides. -->
 
 
