started writing presentation material for internal LT.

--- a/templates/presentation/20130613.html
+++ b/templates/presentation/20130613.html
@@ -68,9 +68,17 @@
     <h3>Completion for...</h3>
     <ul>
         <li>directory path</li>
-        <li>git / svn</li>
+        <li>command options</li>
         <li>configure</li>
     </ul>
+</section>
+
+<section class="slide">
+    <h2>Aliases with Pipes</h2>
+</section>
+
+<section class="slide">
+    <h2>Open apps depending on file extentions</h2>
 </section>
 
 <section class="slide">
