--- a/templates/presentation/20130620.html
+++ b/templates/presentation/20130620.html
@@ -81,7 +81,7 @@ $ ./configure --[TAB]</pre></code>
 </section>
 
 <section class="slide">
-    <h2>Aliase with Pipe "|"</h2>
+    <h2>Aliases with Pipe "|"</h2>
     <code><pre class="large-text">$ alias -g L="| less"
 $ alias -g G="| grep"</pre></code>
 </section>
