more mocking up coming up presentation.

--- a/templates/presentation/20130801.html
+++ b/templates/presentation/20130801.html
@@ -67,8 +67,8 @@
 <section class="slide">
     <h2>Idea 0 - Package Manager</h2>
     <h3>• Emacs - ELPA / MELPA</h3>
-    <h3>• Vim - ...</h3>
-    <h3>• Sublime Text - ...</h3>
+    <h3>• Vim - NeoBundle (almost De Facto Standard)</h3>
+    <h3>• Sublime Text - Sublime Package Control</h3>
 </section>
 
 <section class="slide">
@@ -82,6 +82,27 @@
     <h2>Idea 2 - Code standard check</h2>
     <h3>• Emacs - Flymake</h3>
     <h3>• Vim - Flymake</h3>
+    <h3>• Sublime Text - ???</h3>
+</section>
+
+<section class="slide">
+    <h2>Idea 3 - Manage Git diff</h2>
+    <h3>• Emacs - GitGutter</h3>
+    <h3>• Vim - ???</h3>
+    <h3>• Sublime Text - ???</h3>
+</section>
+
+<section class="slide">
+    <h2>Idea 3 - Show white space</h2>
+    <h3>• Emacs - WS-mode</h3>
+    <h3>• Vim - ???</h3>
+    <h3>• Sublime Text - Configurable</h3>
+</section>
+
+<section class="slide">
+    <h2>Idea 3 - Incremental Search (for anything!)</h2>
+    <h3>• Emacs - Helm / Anything</h3>
+    <h3>• Vim - Unite</h3>
     <h3>• Sublime Text - ???</h3>
 </section>
 
