--- a/templates/presentation.html
+++ b/templates/presentation.html
@@ -11,6 +11,8 @@
 <ul>
 <li><a href="/presentation/20130422">April 22, 2013: Code Golf in Ruby - Ruby Meetup @ HootSuite</a></li>
 <li><a href="/presentation/20130620">June 20, 2013: Zsh Introduction - HootSuite LT @ HootSuite</a></li>
+<li>July 4, 2013: How i18n works - HootSuite LT (Slides are only for Employees) - HootSuite LT @ HootSuite</li>
+<li><a href="/presentation/20130801">August 1, 2013: Modern Programming Environment - HootSuite LT @ HootSuite</a></li>
 </ul>
 </p>
 
