modified slides for better presentation.

--- a/templates/presentation/20130801.html
+++ b/templates/presentation/20130801.html
@@ -50,6 +50,10 @@
 </section>
 
 <section class="slide">
+    <h1>Editor<br />=<br />Programming Environment</h1>
+</section>
+
+<section class="slide">
     <h1>Programmers love programmable editors</h1>
 </section>
 
@@ -65,13 +69,6 @@
 </section>
 
 <section class="slide">
-    <h2>Idea 0 - Package Manager</h2>
-    <h3>• Emacs - ELPA / MELPA</h3>
-    <h3>• Vim - NeoBundle (almost De Facto Standard)</h3>
-    <h3>• Sublime Text - Sublime Package Control</h3>
-</section>
-
-<section class="slide">
     <h2>Idea 1 - Run snippets immediately</h2>
     <h3>• Emacs - QuickRun</h3>
     <h3>• Vim - QuickRun</h3>
@@ -79,35 +76,38 @@
 </section>
 
 <section class="slide">
-    <h2>Idea 2 - Code standard check</h2>
+    <h2>Idea 2 - Quick error check</h2>
+    <p>Fixing problems sooner is better!</p>
     <h3>• Emacs - Flymake</h3>
     <h3>• Vim - Flymake</h3>
-    <h3>• Sublime Text - ???</h3>
 </section>
 
 <section class="slide">
     <h2>Idea 3 - Manage Git diff</h2>
     <h3>• Emacs - GitGutter</h3>
-    <h3>• Vim - ???</h3>
-    <h3>• Sublime Text - ???</h3>
 </section>
 
 <section class="slide">
-    <h2>Idea 3 - Show white space</h2>
+    <h2>Idea 4 - Show white space</h2>
     <h3>• Emacs - WS-mode</h3>
-    <h3>• Vim - ???</h3>
     <h3>• Sublime Text - Configurable</h3>
 </section>
 
 <section class="slide">
-    <h2>Idea 3 - Incremental Search (for anything!)</h2>
+    <h2>Idea 4 - Incremental Search (for anything!)</h2>
     <h3>• Emacs - Helm / Anything</h3>
     <h3>• Vim - Unite</h3>
-    <h3>• Sublime Text - ???</h3>
 </section>
 
 <section class="slide">
     <h1>Thanks!</h1>
+</section>
+
+<section class="slide">
+    <h2>Appendix - Package Managers</h2>
+    <h3>• Emacs - <a href="http://elpa.gnu.org/">ELPA</a> / <a href="http://melpa.milkbox.net/">MELPA</a></h3>
+    <h3>• Vim - <a href="https://github.com/Shougo/neobundle.vim">NeoBundle</a></h3>
+    <h3>• Sublime Text - <a href="http://wbond.net/sublime_packages/package_control">Sublime Package Control</a></h3>
 </section>
 
 <!-- End slides. -->
