modified slides for better presentation.

--- a/templates/presentation/20130801.html
+++ b/templates/presentation/20130801.html
@@ -94,7 +94,7 @@
 </section>
 
 <section class="slide">
-    <h2>Idea 4 - Incremental Search (for anything!)</h2>
+    <h2>Idea 5 - Incremental Search (everywhere!)</h2>
     <h3>• Emacs - Helm / Anything</h3>
     <h3>• Vim - Unite</h3>
 </section>
