subtle text change.

--- a/templates/presentation/20130912.html
+++ b/templates/presentation/20130912.html
@@ -58,7 +58,7 @@
 </section>
 
 <section class="slide">
-    <h1>that Apple killed him!</h1>
+    <h1>that Apple killed it!</h1>
 </section>
 
 <section class="slide">
