Add a presentation (in progress)

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,21 +2,7 @@
 <html lang="ja">
 
 <head>
-<title>mahata.net</title>
+<title>Never reachable index.html</title>
 </head>
-
-<body>
-<p>
-<a href="https://facebook.com/yasunori.mahata"><img src="/static/img/favicon/facebook.png" alt="facebook"></a>
-<a href="https://github.com/mahata"><img src="/static/img/favicon/github.png" alt="github.com"></a>
-<a href="http://d.hatena.ne.jp/mahata"><img src="/static/img/favicon/hatena-diary.png" alt="hatena diary"></a>
-<a href="http://blog.livedoor.jp/mahata_net/"><img src="/static/img/favicon/livedoor-blog.png" alt="livedoor blog"></a>
-<a href="http://mixi.jp/show_profile.pl?id=180220"><img src="/static/img/favicon/mixi.png" alt="mixi"></a>
-<a href="http://smart-web-nikki.herokuapp.com/"><img src="/static/img/favicon/smart-web-nikki.ico" alt="Smart Web Nikki"></a>
-<a href="http://swn.mahata.net/"><img src="/static/img/favicon/stupid-web-nikki.ico" alt="Stupid Web Nikki"></a>
-<a href="http://mahata.tumblr.com/"><img src="/static/img/favicon/tumblr.png" alt="tumblr"></a>
-<a href="https://twitter.com/mahata/"><img src="/static/img/favicon/twitter.png" alt="twitter"></a>
-</p>
-</body>
 
 </html>
