--- a/templates/presentation.html
+++ b/templates/presentation.html
@@ -9,12 +9,11 @@
 
 <p>
 <ul>
-<li><a href="/presentation/20130422">April 22, 2013: Code Golf in Ruby - Ruby Meetup @ HootSuite</a></li>
-<li><a href="/presentation/20130620">June 20, 2013: Zsh Introduction - HootSuite LT @ HootSuite</a></li>
-<li>July 4, 2013: How i18n works - HootSuite LT (Slides are only for Employees) - HootSuite LT @ HootSuite</li>
-<li><a href="/presentation/20130801">August 1, 2013: Modern Programming Environment - HootSuite LT @ HootSuite</a></li>
-<li><a href="/presentation/20130912">September 12, 2013: Notification Center on MacOSX - HootSuite LT @ HootSuite</a></li>
-<li><a href="/presentation/20131003">October 3, 2013: Clustering and NLP using Twitter API - HootSuite LT @ HootSuite</a></li>
+<li><a href="/presentation/20130422">2013/04/22 - Code Golf in Ruby - Ruby Meetup @ HootSuite</a></li>
+<li><a href="/presentation/20130620">2013/06/20 - Zsh Introduction - HootSuite LT @ HootSuite</a></li>
+<li><a href="/presentation/20130801">2013/08/01 - Modern Programming Environment - HootSuite LT @ HootSuite</a></li>
+<li><a href="/presentation/20130912">2013/09/12 - Notification Center on MacOSX - HootSuite LT @ HootSuite</a></li>
+<li><a href="/presentation/20160205">2016/02/05 - Vagrant &amp; Ansible - Orb Lunch &amp; Learn</a></li>
 </ul>
 </p>
 
