Wrap up-up a presentation

--- a/templates/presentation/20160205.html
+++ b/templates/presentation/20160205.html
@@ -73,6 +73,16 @@ end</pre></code>
 </section>
 
 <section class="slide">
+    <h2>Vagrant basic commands</h2>
+    <code><pre class="large-text"> $ vagrant up
+$ vagrant halt
+$ vagrant destroy
+$ vagrant status
+$ vagrant provision
+$ vagrant reload</pre></code>
+</section>
+
+<section class="slide">
     <h2>Where can I find Vagrant boxes?</h2>
     <h3>• <a href="http://www.vagrantbox.es/">Vagrantbox.es</a></h3>
     <h3>• <a href="https://atlas.hashicorp.com/boxes/search?vagrantcloud=1">Vagrant Cloud</a> (i.e. vagrant box add centos/7)</h3>
@@ -90,7 +100,7 @@ end</pre></code>
 </section>
 
 <section class="slide">
-    <h2>Why provisioner?</h2>
+    <h2>Why provisioners?</h2>
     <h3>• Write configurations as code</h3>
     <h3>• Configurations with VCS (such as Git)</h3>
 </section>
@@ -100,7 +110,7 @@ end</pre></code>
     <h3>• No DSL is needed</h3>
     <h3>• No Agent process is needed</h3>
     <h3>• Configuration as YAML</h3>
-    <h3>• Back up by RedHat</h3>
+    <h3>• Support from RedHat</h3>
 </section>
 
 <section class="slide">
